
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.rate";
option java_outer_classname = "RateProto";

package raterpc;

// The greeting service definition.
service Rater {
  // Sends a greeting
  rpc GetSDGRate(Empty) returns (SDGRate) {}
  rpc GetDonations(DonationURL) returns (TotalDonations) {}
}

message DonationURL {
  string url = 1;
}

message TotalDonations {
  float total_amount = 1;
  int32 number_transactions = 2;
}

message Empty {

}

// The response message containing the greetings
message SDGRate {
  float message = 1;
}
